tests/reference/run-allocated_04-b4ea2f8.stderr
runtime error: Attempting to allocate already allocated variable 'x'
 --> tests/errors/allocated_04.f90:6:5
  |
6 |     allocate(x)  ! Error: double allocation of scalar
  |     ^^^^^^^^^^^ 
